tests/pass/AnInterface.java
/*package pass;

import java.lang.System;

public class AnInterface extends Interfaces{

}*/