tests/fail/UnaryComplement.java
package fail;

import java.lang.System;


public class UnaryComplement {
    public static void main(String[] args) {
        System.out.print(~'a');
    }
}
